bucket_F8/libfreehand
# Buildsheet autogenerated by ravenadm tool -- Do not edit.

NAMEBASE=		libfreehand
VERSION=		0.1.2
KEYWORDS=		graphics
VARIANTS=		standard
SDESC[standard]=	Library for import of FreeHand drawings
HOMEPAGE=		https://wiki.documentfoundation.org/DLP/Libraries/libfreehand
CONTACT=		nobody

DOWNLOAD_GROUPS=	main
SITES[main]=		https://dev-www.libreoffice.org/src/libfreehand/
DISTFILE[1]=		libfreehand-0.1.2.tar.xz:main
DF_INDEX=		1
SPKGS[standard]=	single

OPTIONS_AVAILABLE=	none
OPTIONS_STANDARD=	none

BUILD_DEPENDS=		boost-libraries:dev:standard
			icu:dev:standard
			gperf:primary:standard
			cppunit:single:standard
			lcms2:dev:standard
			librevenge:dev:standard
BUILDRUN_DEPENDS=	librevenge:primary:standard
			lcms2:primary:standard

USES=			perl:build pkgconfig libtool zlib mbsdfix

FPC_EQUIVALENT=		graphics/libfreehand

MUST_CONFIGURE=		gnu
CONFIGURE_ARGS=		--disable-werror
			--without-docs

INSTALL_TARGET=		install-strip
SOVERSION=		1.0.2
PLIST_SUB=		VER=0.1

[FILE:117:descriptions/desc.single]
Libfreehand is library providing ability to interpret and import
Adobe/Macromedia drawings into various applications


[FILE:103:distinfo]
0e422d1564a6dbf22a9af598535425271e583514c0f7ba7d9091676420de34ac       516132 libfreehand-0.1.2.tar.xz


[FILE:246:manifests/plist.single]
bin/
 fh2raw
 fh2svg
 fh2text
include/libfreehand-%%VER%%/libfreehand/
 FreeHandDocument.h
 libfreehand.h
lib/
 libfreehand-%%VER%%.so
 libfreehand-%%VER%%.so.%%SOMAJOR%%
 libfreehand-%%VER%%.so.%%SOVERSION%%
lib/pkgconfig/libfreehand-%%VER%%.pc


[FILE:1762:patches/patch-src_lib_libfreehand__utils.cpp]
Regressed by https://github.com/unicode-org/icu/commit/480bec3ea652

libfreehand_utils.cpp:165:30: error: expected ';' after do/while statement
    U16_NEXT(s, j, length, c)
                             ^
                             ;
libfreehand_utils.cpp:168:23: error: use of undeclared identifier 'outbuf'
    U8_APPEND_UNSAFE(&outbuf[0], i, c);
                      ^
libfreehand_utils.cpp:168:23: error: use of undeclared identifier 'outbuf'
libfreehand_utils.cpp:168:23: error: use of undeclared identifier 'outbuf'
libfreehand_utils.cpp:168:23: error: use of undeclared identifier 'outbuf'
libfreehand_utils.cpp:168:23: error: use of undeclared identifier 'outbuf'
libfreehand_utils.cpp:168:23: error: use of undeclared identifier 'outbuf'
libfreehand_utils.cpp:168:23: error: use of undeclared identifier 'outbuf'
libfreehand_utils.cpp:169:5: error: use of undeclared identifier 'outbuf'; did you mean 'setbuf'?
    outbuf[i] = 0;
    ^~~~~~
    setbuf
/usr/include/stdio.h:283:7: note: 'setbuf' declared here
void     setbuf(FILE * __restrict, char * __restrict);
         ^
libfreehand_utils.cpp:169:5: error: subscript of pointer to function type 'void (FILE *, char *)' (aka 'void (__sFILE *, char *)')
    outbuf[i] = 0;
    ^~~~~~
libfreehand_utils.cpp:171:25: error: use of undeclared identifier 'outbuf'
    text.append((char *)outbuf);
                        ^

--- src/lib/libfreehand_utils.cpp.orig	2017-09-16 10:28:50 UTC
+++ src/lib/libfreehand_utils.cpp
@@ -162,7 +162,7 @@ void libfreehand::_appendUTF16(librevenge::RVNGString 
   while (j < length)
   {
     UChar32 c;
-    U16_NEXT(s, j, length, c)
+    U16_NEXT(s, j, length, c);
     unsigned char outbuf[U8_MAX_LENGTH+1];
     int i = 0;
     U8_APPEND_UNSAFE(&outbuf[0], i, c);

